0.8.8
    Update killbill-oss-parent to 0.5.14

0.8.7
    DDL: remove unused paid_through_date column
    https://github.com/killbill/killbill/issues/130
    https://github.com/killbill/killbill/issues/149
    Add API to retrieve deleted tags
    Add search APIs for payments
    Audit API optimizations
    JDBI optimizations
    Update killbill-oss-parent to 0.5.9

0.8.6
    Partial fix for https://github.com/killbill/killbill/issues/141
    https://github.com/killbill/killbill/issues/143
    https://github.com/killbill/killbill/issues/145
    https://github.com/killbill/killbill/issues/147
    https://github.com/killbill/killbill/issues/148
    DDL: remove unused billing_cycle_day_utc column

0.8.5
    https://github.com/killbill/killbill/issues/134
    https://github.com/killbill/killbill/issues/135
    https://github.com/killbill/killbill/issues/136
    https://github.com/killbill/killbill/issues/140

0.8.4
    Subscription base speedups
    Fix regression in bundle timeline API
    Fix ClassCastException in Beatrix
    https://github.com/killbill/killbill/issues/123
    https://github.com/killbill/killbill/issues/132

0.8.3
    Entitlement speedups

0.8.2
    Lots of subscription & entitlement bugfixes
    https://github.com/killbill/killbill/issues/121
    https://github.com/killbill/killbill/issues/124
    https://github.com/killbill/killbill/issues/126
    https://github.com/killbill/killbill/issues/128

0.8.1
    https://github.com/killbill/killbill/issues/94
    https://github.com/killbill/killbill/issues/116

0.8.0
    Add missing audit columns in blocking_states

0.7.1
    Add support for currency conversion plugin type
    Allow payments/refund to be processed by plugin in a different currency than the one on the account

0.7.0
    Initial support for pagination
    Entitlement bugfixes

0.5.0
    Initial implementation of RBAC
     - default credentials: admin/password
    Remove analytics plugin from defaultbundles package