@@ -69,6 +69,7 @@ import com.ning.billing.payment.retry.AutoPayRetryService.AutoPayRetryServiceSch
 import com.ning.billing.payment.retry.FailedPaymentRetryService.FailedPaymentRetryServiceScheduler;
 import com.ning.billing.payment.retry.PluginFailureRetryService.PluginFailureRetryServiceScheduler;
 import com.ning.billing.tag.TagInternalApi;
+import com.ning.billing.util.callcontext.TenantContext;
 import com.ning.billing.util.config.PaymentConfig;
 import com.ning.billing.util.dao.NonEntityDao;
 import com.ning.billing.util.entity.DefaultPagination;
@@ -145,6 +146,72 @@ public class PaymentProcessor extends ProcessorBase {
             }
         }
         return fromPaymentModelDao(model, pluginInfo, context);
+    }
+
+    public Pagination<Payment> getPayments(final Long offset, final Long limit, final TenantContext tenantContext, final InternalTenantContext internalTenantContext) {
+        // Note that we cannot easily do streaming here, since we would have to rely on the statistics
+        // returned by the Pagination objects from the plugins and we probably don't want to do that (if
+        // one plugin gets it wrong, it may starve the others).
+        final List<Payment> allResults = new LinkedList<Payment>();
+        Long totalNbRecords = 0L;
+        Long maxNbRecords = 0L;
+
+        // Search in all plugins (we treat the full set of results as a union with respect to offset/limit)
+        boolean firstSearch = true;
+        for (final String pluginName : getAvailablePlugins()) {
+            try {
+                final Pagination<Payment> payments;
+                if (allResults.size() >= limit) {
+                    // We have enough results, we just keep going (limit 1) to get the stats
+                    payments = getPayments(firstSearch ? offset : 0L, 1L, pluginName, tenantContext, internalTenantContext);
+                    // Required to close database connections
+                    ImmutableList.<Payment>copyOf(payments);
+                } else {
+                    payments = getPayments(firstSearch ? offset : 0L, limit - allResults.size(), pluginName, tenantContext, internalTenantContext);
+                    allResults.addAll(ImmutableList.<Payment>copyOf(payments));
+                }
+                firstSearch = false;
+                totalNbRecords += payments.getTotalNbRecords();
+                maxNbRecords += payments.getMaxNbRecords();
+            } catch (final PaymentApiException e) {
+                log.warn("Error while searching plugin " + pluginName, e);
+                // Non-fatal, continue to search other plugins
+            }
+        }
+
+        return new DefaultPagination<Payment>(offset, limit, totalNbRecords, maxNbRecords, allResults.iterator());
+    }
+
+    public Pagination<Payment> getPayments(final Long offset, final Long limit, final String pluginName, final TenantContext tenantContext, final InternalTenantContext internalTenantContext) throws PaymentApiException {
+        final PaymentPluginApi pluginApi = getPaymentPluginApi(pluginName);
+
+        // Find all payments for all accounts
+        final Pagination<PaymentModelDao> paymentModelDaos = paymentDao.getPayments(pluginName, offset, limit, internalTenantContext);
+
+        return new DefaultPagination<Payment>(paymentModelDaos,
+                                              limit,
+                                              Iterators.<Payment>filter(Iterators.<PaymentModelDao, Payment>transform(paymentModelDaos.iterator(),
+                                                                                                                      new Function<PaymentModelDao, Payment>() {
+                                                                                                                          @Override
+                                                                                                                          public Payment apply(final PaymentModelDao paymentModelDao) {
+                                                                                                                              final PaymentInfoPlugin pluginInfo;
+                                                                                                                              try {
+                                                                                                                                  pluginInfo = pluginApi.getPaymentInfo(paymentModelDao.getAccountId(), paymentModelDao.getId(), tenantContext);
+                                                                                                                              } catch (final PaymentPluginApiException e) {
+                                                                                                                                  log.warn("Unable to find payment  id " + paymentModelDao.getId() + " in plugin " + pluginName);
+                                                                                                                                  return null;
+                                                                                                                              }
+
+                                                                                                                              if (pluginInfo.getKbPaymentId() == null) {
+                                                                                                                                  // Garbage from the plugin?
+                                                                                                                                  log.debug("Plugin {} returned a payment without a kbPaymentId", pluginName);
+                                                                                                                                  return null;
+                                                                                                                              }
+
+                                                                                                                              return fromPaymentModelDao(paymentModelDao, pluginInfo, internalTenantContext);
+                                                                                                                          }
+                                                                                                                      }),
+                                                                        Predicates.<Payment>notNull()));
     }
 
     public Pagination<Payment> searchPayments(final String searchKey, final Long offset, final Long limit, final InternalTenantContext internalTenantContext) {
@@ -403,7 +470,7 @@ public class PaymentProcessor extends ProcessorBase {
                 final List<PaymentAttemptModelDao> attempts = paymentDao.getAttemptsForPayment(paymentId, context);
                 final PaymentAttemptModelDao lastAttempt = attempts.get(attempts.size() - 1);
                 final PaymentStatus newPaymentStatus = isSuccess ? PaymentStatus.SUCCESS : PaymentStatus.PAYMENT_FAILURE_ABORTED;
-                paymentDao.updatePaymentAndAttemptOnCompletion(paymentId, newPaymentStatus, payment.getProcessedAmount(), payment.getProcessedCurrency(), lastAttempt.getId(),null, null, context);
+                paymentDao.updatePaymentAndAttemptOnCompletion(paymentId, newPaymentStatus, payment.getProcessedAmount(), payment.getProcessedCurrency(), lastAttempt.getId(), null, null, context);
                 return null;
             }
         });
